(chore): add create product functional testing

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>ADV Shop</title>
+    <style>
+        #viewProductsButton {
+        }
+    </style>
 </head>
 <body>
     <h3>Welcome</h3>
-    <a th:href="@{/product/list}"><button type="button">View Products</button></a>
+    <a th:href="@{/product/list}"><button type="button" id="viewProductsButton">View Products</button></a>
 </body>
 </html>
